# SimChat

./: README.md  userPerfil.txt
Server/: 516.txt  Gabriel.txt  Testes.txt  gabriel.txt  ka.txt
lib/: UNICODE.data
lib/Server/: Gabriel.txt
src/: CMakeLists.txt  FUN  FUN.cpp  Func.hpp  Makefile  Simchats.db  Version.h  report.sh  screen.cpp  sender.cpp  sql.cpp  testfun.cpp
